Added link for other font-family and changed bg-color of navbar and buttons

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pokedex App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Manjari&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/CSS" href="css/styles.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm navbar-light fixed-top" style="background-color: #cce3f7;">
+    <nav class="navbar navbar-expand-sm navbar-light fixed-top" style="background-color: #9cd9eb;">
       <a class="navbar-brand" href="index.html">
         <h1>Pokédex</h1>
       </a>
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <!-- Search form -->
         <form class="form-inline">
-          <input class="form-control mr-sm-2" id="pokemon-search" type="search" placeholder="Search a Pokemon" aria-label="Search a Pokemon">
+          <input class="form-control mr-sm-2" id="pokemon-search" type="search" placeholder="Search..." aria-label="Search a Pokemon">
         </form>
       </div>
     </nav>
@@ -35,7 +35,7 @@
           </div>
           <div class="modal-body"></div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
